--- a/imageGrid.html
+++ b/imageGrid.html
@@ -7,6 +7,7 @@
     <title>Image Grid</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css"> 
     <link rel="stylesheet" type="text/css" href="imageGrid.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     
 </head>
 
@@ -47,7 +48,7 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
+            <h1><i class="fas fa-camera-retro"></i> The Image Gallery</h1>
             <p>A bunch of beautiful images that I didn't take (except for the first one!)</p>
         </div>
 
